--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,73 @@
     transform: rotate(360deg);
   }
 }
+.sidebarApp{
+width: 100%;
+}
+.mapApp{
+width:100%
+}
+/* On screens that are 1900px or less, set the background color to blue */
+@media screen and (max-width: 1900px) {
+  .sidebarApp {
+width: 100%;
+  }
+  .mapApp{
+width: 100%;
+
+  }
+}
+/* On screens that are 1600px or less, set the background color to blue */
+@media screen and (max-width: 1600px) {
+  .sidebarApp {
+width: 100%;
+  }
+  .mapApp{
+width: 100%;
+
+  }
+}
+
+/* On screens that are 1400px or less, set the background color to blue */
+@media screen and (max-width: 1400px) {
+  .sidebarApp {
+width: 100%;
+  }
+  .mapApp{
+width: 100%;
+
+  }
+}
+
+/* On screens that are 1200px or less, set the background color to blue */
+@media screen and (max-width: 1200px) {
+  .sidebarApp {
+width: 100%;
+  }
+  .mapApp{
+width: 100%;
+
+  }
+}
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+  .sidebarApp {
+width: 100%;
+  }
+  .mapApp{
+width: 100%;
+
+  }
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 600px) {
+  .sidebarApp {
+    width: 100%;
+  }
+  .mapApp{
+    width: 100%;
+
+  }
+}
